# rad

./: Cargo.toml  README.md  rad.toml
.github/workflows/: dev.yml
config/: server.toml
demo/: nvim_init_req.txt
deploy/freebsd/: rad
deploy/launchd/: README.md  com.user.rad.plist
deploy/systemd/: README.md  rad.service
src/: client.rs  config.rs  error.rs  instance.rs  logging.rs  main.rs  mapper.rs  protocol.rs  server.rs
src/protocol/: control.rs  lsp.rs
