[package]
name = "rad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
