[package]
name = "rad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
dashmap = "6"
jiff = "0.2"
serde_json = "1"
snafu = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
